--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biconomy/account": "^3.1.1",
+    "@biconomy/bundler": "^3.1.1",
+    "@biconomy/common": "^3.1.1",
+    "@biconomy/core-types": "^3.1.1",
+    "@biconomy/particle-auth": "^3.1.1",
+    "@biconomy/paymaster": "^3.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -29,6 +35,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
